syntax = "proto3";

option go_package = "github.com/xremming/mousetoria/proto";

enum TimeOfDay {
	// Night is the time between 00:00 and 05:59
	NIGHT = 0;
	// Morning is the time between 06:00 and 11:59
	MORNING = 1;
	// Afternoon is the time between 12:00 and 17:59
	AFTERNOON = 2;
	// Evening is the time between 18:00 and 23:59
	EVENING = 3;
}

message Timestamp {
	sint32 day = 1;
	TimeOfDay time_of_day = 2;
}
